# graqle

./: (inferred from graph)  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING-COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.lambda  GRAQ.md  LICENSE  MIGRATION-0.46-to-0.52.md  NOTICE  QUICKSTART.md  README.md  SECURITY.md  demo_kg.json  docker-compose.yml  glama.json  graqle.example.yaml  graqle.json  graqle.yaml  pyproject.toml  sdk_audit_report.json  sdk_self_audit.py  server.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/hooks/: graqle-gate.sh
.cognigraph/: activation_memory.json  metrics.json
.gcc/: HFCI-TRACKER.md  main.md  project-kg.md  registry.md
.gcc/checkpoints/: 2026-03-27_00-00_feature-coding-assistant_3.md  2026-03-27_01-00_feature-coding-assistant_4.md  2026-03-27_02-00_feature-coding-assistant_5.md  2026-03-27_03-30_feature-coding-assistant_6.md  2026-03-27_05-00_feature-coding-assistant_7.md  2026-03-27_12-00_feature-coding-assistant_8.md  2026-03-27_12-30_feature-coding-assistant_8.md  2026-03-27_13-24_feature-coding-assistant_9.md
.github/: FUNDING.yml
.github/workflows/: adr-visibility-gate.yml  ci.yml  deploy-lambda.yml  eur-lex-weekly.yml  gate.yml  governance-gate.yml  graqle-scan.yml  ip-content-gate.yml  ip_gate.yml  path-deny-guard.yml  pr-guardian.yml  publish-mcp-registry.yml  release-gate-example.yml  trade-secret-wheel-gate.yml
.graqle/: activation_memory.json  dogfood-issues.md  eur-lex-baseline.json  gov_cumulative.json  metrics.json
.graqle/intelligence/: impact_matrix.json  module_index.json
.gsm/: index.md
.gsm/decisions/: ADR-105.md  ADR-106.md  ADR-107.md  ADR-108.md  ADR-109.md  ADR-110.md  ADR-111-generation-types-new-module.md  ADR-111.md  ADR-112-graq-generate-phase1.md  ADR-112-no-silent-reasoning-fallback.md  ADR-112.md  ADR-113-agenerate-stream-default-impl.md  ADR-113-graq-predict-as-deployment-gate.md  ADR-113-pypi-trusted-publishing-only.md  ADR-114-graq-generate-stream-param.md  ADR-114-invariant-detector.md  ADR-115-phase35-file-system-tools.md  ADR-115-security-invariant-detectors.md  ADR-116-coding-ontology-completeness.md  ADR-117-cognito-secrethash-registration-failure.md  ADR-117-compound-workflow-tools-and-graq-test.md  ADR-118-graq-plan-plan-as-graph.md  ADR-118-stripe-shared-account-graqle-products.md  ADR-119-governance-enforcement.md  ADR-120-phase8-wiring-gaps.md  ADR-122-feature-branch-isolation-protocol.md  ADR-123-kg-sync-single-source-of-truth.md  ADR-151-per-call-governance-topology-ip-flag.md  ADR-154-vscode-extension-integration-spec.md  HANDOFF-VSCODE-EXTENSION-TEAM.md
action/pr-guardian/: Dockerfile  action.yml  entrypoint.sh
action/release-gate/: Dockerfile  action.yml  entrypoint.sh
cognigraph/activation/: __init__.py  adaptive.py  chunk_scorer.py  cypher_activation.py  pcst.py  reformulator.py  relevance.py
cognigraph/adapters/: hub.py
cognigraph/agents/: slm_agent.py
cognigraph/backends/: api.py
cognigraph/benchmarks/: __init__.py  benchmark_runner.py  eu_regqa.py  hotpotqa_loader.py
cognigraph/cli/: main.py
cognigraph/config/: settings.py
cognigraph/connectors/: neo4j.py
cognigraph/core/: graph.py  node.py  observer_report.py  types.py
cognigraph/evaluation/: __init__.py  constrained_f1.py
cognigraph/leads/: __init__.py  collector.py
cognigraph/licensing/: __init__.py  keygen.py  manager.py
cognigraph/metrics/: __init__.py  dashboard.py  engine.py
cognigraph/ontology/: domain_detector.py  ontology_generator.py  router.py  skill_admin.py
cognigraph/orchestration/: debate.py  observer.py  orchestrator.py
cognigraph/plugins/: __init__.py  mcp_dev_server.py
cognigraph/server/: app.py  lambda_handler.py  models.py  stripe_webhook.py
cognigraph/studio/: __init__.py  app.py
docs/: ADR-103-content-aware-pcst.md  ADR-104-query-reformulator.md  api-reference.md  auto-grow-end-to-end.md  case-study-token-economics.md  mcp-setup.md
docs/training/: eu-ai-act-multi-agent-decision-system.md
docs/website/: index.html
examples/: README.md  governance_example.py  quickstart.py  runtime_attest_production_decisions.py  runtime_govern_serve_anchoring.py  runtime_middleware_fastapi.py  v059_cryptographic_governance_usecase.py  v059_e2e_dogfood.py
examples/release-gate/: README.md  release-gate.yml
examples/runtime_mappings/: loan_mapping.yaml
gate-demos/: README.md  __init__.py  conftest.py  test_gate_demos.py
graqle/: __init__.py  __version__.py  _post_install_notice.py  api.py  edition.py  entitlement.py  pricing.py  routing.py
graqle/activation/: __init__.py  adaptive.py  chunk_scorer.py  cypher_activation.py  default_providers.py  embeddings.py  factory.py  factory_helpers.py  health_probe.py  layer.py  multi_signal.py  pcst.py  providers.py  real_providers.py  reformulator.py  registry.py  relevance.py  tier_gate.py
graqle/adapters/: __init__.py  auto_select.py  config.py  hub.py  loader.py  registry.py
live-demos/: README.md
marketing/: DISTRIBUTION_TRACKER.md  devto-article.md  directory-submissions.md  facebook-posts.md  hackernews-showhn.md  newsletter-pitches.md  pr-awesome-mcp-appcypher.md  pr-awesome-mcp-punkpeye.md  pr-awesome-python.md  producthunt-launch.md  reddit-posts.md  twitter-content.md
paper/: cognigraph.tex  cognigraph_v2.tex
patent/: CogniGraph_CIP_Abstract.tex  CogniGraph_CIP_Claims.tex  CogniGraph_CIP_Description.tex
plugins/: README.md
poc/: add_env_edges.py  ask_cognigraph.py  deep_enrich_kg.py  enrich_kg.py  full_moat_poc.py
scripts/: audit_branches.py  bisect_edge_loss.py  cg_14_config_drift_applier.py  cg_14_handler_insert.py  cg_reason_diag_01_applier.py  debate_evidence.py  generate_mcp_inventory.py  graqle_graph_health.py  migrate_activation_yaml.py  neptune_upload.py  profile_reason.py  rebuild_npz.py  smoke_test_phase4.py  wave2_b1_ip_scan.py  wave2_find_internal_refs.py
social-media/: PUNCHLINES.md  README.md
tests/: __init__.py  conftest.py  test_memory_tool.py  test_routing.py
tools/: trust_policy.yaml  verify-graqle-example.yml
(+1503 files in other folders)
