[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognigraph"
version = "0.15.0"
description = "Dev Intelligence Layer — turn any codebase into a reasoning-ready knowledge graph. Works with any IDE, any AI tool, or plain terminal."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Harish Kumar", email = "harish.kumar@quantamixsolutions.com" },
]
keywords = [
    "knowledge-graph", "multi-agent", "reasoning", "slm",
    "graph-of-agents", "lora", "pcst", "distributed-reasoning",
    "governance", "shacl", "owl", "ontology", "mcp",
    "bayesian-learning", "adaptive-activation", "regulatory-ai",
    "dev-intelligence", "development-tools", "cursor", "vscode",
    "claude-code", "copilot", "ai-coding", "codebase-reasoning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "sentence-transformers>=2.2",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.0",
    "transformers>=4.35",
    "peft>=0.7",
    "vllm>=0.3",
    "sentence-transformers>=2.2",
]
cpu = [
    "llama-cpp-python>=0.2",
    "sentence-transformers>=2.2",
]
neo4j = [
    "neo4j>=5.0",
]
api = [
    "anthropic>=0.18",
    "openai>=1.0",
    "boto3>=1.28",
    "httpx>=0.25",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
studio = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]
all = [
    "cognigraph[gpu,neo4j,api,server,studio]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-env>=1.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.scripts]
kogni = "cognigraph.cli.main:app"

[project.urls]
Homepage = "https://cognigraph.dev"
Documentation = "https://github.com/quantamixsol/cognigraph#readme"
Repository = "https://github.com/quantamixsol/cognigraph"
Changelog = "https://github.com/quantamixsol/cognigraph/releases"
"Bug Tracker" = "https://github.com/quantamixsol/cognigraph/issues"

[tool.hatch.build.targets.sdist]
exclude = ["cognigraph/benchmarks/data/*", "paper/*", "patent/*"]

[tool.hatch.build.targets.wheel]
packages = ["cognigraph"]
exclude = ["cognigraph/benchmarks/data/*"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "cognigraph/examples"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
