[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graqle"
version = "0.29.0"
description = "Query your architecture, not your files. Turn any codebase into a self-learning knowledge graph with governance, 201 skills, and multi-signal activation."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Harish Kumar", email = "harish.kumar@quantamixsolutions.com" },
]
keywords = [
    "knowledge-graph", "multi-agent", "reasoning", "slm",
    "graph-of-agents", "lora", "pcst", "distributed-reasoning",
    "governance", "shacl", "owl", "ontology", "mcp",
    "bayesian-learning", "adaptive-activation", "regulatory-ai",
    "dev-intelligence", "development-tools", "cursor", "vscode",
    "claude-code", "copilot", "ai-coding", "codebase-reasoning",
    "graqle", "graph-reasoning", "code-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2",
]
gpu = [
    "torch>=2.0",
    "transformers>=4.35",
    "peft>=0.7",
    "vllm>=0.3",
    "sentence-transformers>=2.2",
]
cpu = [
    "llama-cpp-python>=0.2",
    "sentence-transformers>=2.2",
]
lite = []
neo4j = [
    "neo4j>=5.0",
]
api = [
    "anthropic>=0.18",
    "openai>=1.0",
    "boto3>=1.28",
    "httpx>=0.25",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
studio = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]
docs = [
    "pdfplumber>=0.9",
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
]
all = [
    "graqle[embeddings,gpu,neo4j,api,server,studio,docs]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-env>=1.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.scripts]
graq = "graqle.cli.main:app"

[project.urls]
Homepage = "https://graqle.com"
Documentation = "https://github.com/quantamixsol/graqle#readme"
Repository = "https://github.com/quantamixsol/graqle"
Changelog = "https://github.com/quantamixsol/graqle/releases"
"Bug Tracker" = "https://github.com/quantamixsol/graqle/issues"

[tool.hatch.build.targets.sdist]
exclude = ["graqle/benchmarks/data/*", "paper/*", "patent/*"]

[tool.hatch.build]
artifacts = ["graqle/integrations/bridges/*.md"]

[tool.hatch.build.targets.wheel]
packages = ["graqle"]
exclude = ["graqle/benchmarks/data/*"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "graqle/examples"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
