[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graqle"
version = "0.32.3"
description = "Give your AI tools architecture-aware reasoning. Build a knowledge graph from any codebase — dependency analysis, impact analysis, governed AI answers with confidence scores. Works with Claude Code, Cursor, VS Code Copilot. 14 LLM backends, fully offline capable."
readme = "README.md"
license = {text = "Proprietary — see LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Harish Kumar", email = "harish.kumar@quantamixsolutions.com" },
]
keywords = [
    "knowledge-graph", "code-analysis", "dependency-analysis",
    "architecture", "impact-analysis", "code-intelligence",
    "mcp", "mcp-server", "claude-code", "cursor", "vscode",
    "copilot", "ai-coding", "codebase-reasoning", "graqle",
    "graph-reasoning", "dev-intelligence", "development-tools",
    "static-analysis", "code-quality", "cli", "refactoring",
    "multi-agent", "reasoning", "governance", "ai-assistant",
    "code-understanding", "institutional-memory",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "networkx>=3.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.2,<3.0",
]
gpu = [
    "torch>=2.0,<2.5",
    "transformers>=4.35,<4.50",
    "peft>=0.7,<0.14",
    "vllm>=0.3",
    "sentence-transformers>=2.2,<3.0",
]
cpu = [
    "llama-cpp-python>=0.2",
    "sentence-transformers>=2.2,<3.0",
]
lite = []
neo4j = [
    "neo4j>=5.0",
]
api = [
    "anthropic>=0.18",
    "openai>=1.0",
    "boto3>=1.28",
    "httpx>=0.25",
]
server = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
]
studio = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "jinja2>=3.1",
]
docs = [
    "pdfplumber>=0.9",
    "python-docx>=0.8",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
]
scorch = [
    "playwright>=1.40",
    "Pillow>=10.0",
    "boto3>=1.28",
]
phantom = [
    "playwright>=1.40",
    "Pillow>=10.0",
    "boto3>=1.28",
]
all = [
    "graqle[embeddings,neo4j,api,server,studio,docs,scorch,phantom]",
]
all-gpu = [
    "graqle[all,gpu]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.10",
    "pytest-env>=1.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "coverage>=7.0",
]

[project.scripts]
graq = "graqle.cli.main:app"

[project.urls]
Homepage = "https://graqle.com"
Documentation = "https://github.com/quantamixsol/graqle#readme"
Repository = "https://github.com/quantamixsol/graqle"
Changelog = "https://github.com/quantamixsol/graqle/releases"
"Bug Tracker" = "https://github.com/quantamixsol/graqle/issues"
"Patent Notice" = "https://quantamixsolutions.com/patents"

[tool.hatch.build.targets.sdist]
exclude = ["graqle/benchmarks/data/*", "paper/*", "patent/*"]

[tool.hatch.build]
artifacts = ["graqle/integrations/bridges/*.md"]

[tool.hatch.build.targets.wheel]
packages = ["graqle"]
exclude = ["graqle/benchmarks/data/*"]

[tool.hatch.build.targets.wheel.force-include]
"examples" = "graqle/examples"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
